<resources>
    <string name="app_name">SpartaHack-Android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">\@(Username/handle from api)</string>
    <string name="nav_header_subtitle">(Email Address from api)</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_schedule">Schedule</string>

    <string name="faq_text_view">FAQ view</string>

    <string name="events_id">EVENT_ID</string>
    <string name="events_name">Events</string>
    <string name="events_description">Used for alerting the user for meals, tech talks, etc.</string>
    <string name="capture">Capture</string>

    <string name="home_icon_title">Home</string>
    <string name="map_icon_title">Map</string>
    <string name="faq_icon_title">FAQ</string>
    <string name="qr_icon_title">QR</string>
    <string name="profile_icon_title">Profile</string>

    <string name="Login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="or">or</string>

    // Auth0
    <string name="com_auth0_client_id">5fHs0oCQswUEfYQAwyTrF6lpQJa5bbcA</string>
    <string name="com_auth0_domain">spartahack-dev.auth0.com</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>

</resources>
