<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
            android:id="@+id/username"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:inputType="text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="240dp"
            android:hint="@string/username"
            android:importantForAutofill="no"/>

    <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="290dp"
            android:hint="@string/password"
            android:importantForAutofill="no"/>

    <Button
            android:id="@+id/loginButton"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:onClick="login"
            android:text="@string/Login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="350dp"/>

    <TextView
            android:layout_width="14dp"
            android:layout_height="15dp"
            android:text="@string/or"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="410dp"/>

    <Button
            android:id="@+id/signInButton"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:onClick="signUp"
            android:text="@string/signUp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="440dp"/>


</RelativeLayout>
